@@ -1,3 +1,10 @@
+Fri Oct 31 20:53:52 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* external_posting_source/HOWTO,
+	  external_posting_source/mypostingsource.h,utils/make_xappy_tarballs:
+	  Add nearly working details of how to compile an external posting
+	  source.
+
 Fri Oct 31 11:37:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/exact_index_terms.py: Add unittest which I forgot
